scrollbar on hover Fixes surveyjs/private-tasks#379

--- a/packages/survey-creator-core/src/components/toolbox/toolbox.scss
+++ b/packages/survey-creator-core/src/components/toolbox/toolbox.scss
@@ -92,7 +92,7 @@ svc-toolbox {
   overflow-x: hidden;
   width: calcSize(2);
   margin-inline-start: calcSize(-0.5);
-  display: var(--ctr-toolbox-scrollbar-display, block);
+  display: var(--ctr-toolbox-scrollbar-display, none);
   z-index: 30;
   @-moz-document url-prefix() {
     scrollbar-width: thin;
